--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,32 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "es2019",
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "lib": ["es2019"],
-    "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "resolveJsonModule": true,
-    "alwaysStrict": true,
-    "removeComments": true,
-    "noImplicitReturns": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "paths": {
-      "@src/*": ["./src/*"],
-      "@test/*": ["./test/*"],
-      "*": ["types/*.d.ts"]
-    },
-    "rootDirs": ["./src", "./test"],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  },
-  "include": ["./src/**/*.ts", "./test/**/*.ts"],
-  "exclude": ["./node_modules/*", "dist"]
+   "compilerOptions": {
+      "lib": [
+         "es5",
+         "es6"
+      ],
+      "target": "es5",
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "outDir": "./build",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "sourceMap": true
+   }
 }
