--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "node-ts-template",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index.ts",
-    "lint": "eslint ./src ./test --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/module-alias": "^2.0.0",
-    "@types/node": "^14.14.33",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "eslint": "^7.21.0",
-    "ts-node-dev": "^1.1.6",
-    "tsc": "^1.20150623.0",
-    "typescript": "^4.2.3"
-  },
-  "dependencies": {
-    "module-alias": "^2.2.2"
-  }
+   "name": "node-ts-template",
+   "version": "1.0.0",
+   "main": "index.js",
+   "scripts": {
+      "build": "tsc",
+      "start": "ts-node src/index.ts",
+      "lint": "eslint ./src ./test --ext .ts",
+      "lint:fix": "eslint ./src ./test --ext .ts --fix"
+   },
+   "license": "MIT",
+   "devDependencies": {
+      "@types/module-alias": "^2.0.0",
+      "@types/node": "^8.0.29",
+      "@typescript-eslint/eslint-plugin": "^4.17.0",
+      "@typescript-eslint/parser": "^4.17.0",
+      "eslint": "^7.21.0",
+      "ts-node": "3.3.0",
+      "ts-node-dev": "^1.1.6",
+      "tsc": "^1.20150623.0",
+      "typescript": "3.3.3333"
+   },
+   "dependencies": {
+      "@types/argon2": "^0.15.0",
+      "argon2": "^0.27.1",
+      "module-alias": "^2.2.2",
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "^0.2.31"
+   }
 }
