--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/app.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "migration:generate": "ts-node ./node_modules/.bin/typeorm migration:generate",
@@ -12,6 +12,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^8.0.29",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
@@ -23,8 +25,13 @@
     "typescript": "3.3.3333"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.5",
+    "@overnightjs/logger": "^1.2.0",
     "@types/argon2": "^0.15.0",
     "argon2": "^0.27.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "mysql": "^2.14.1",
     "pg": "^8.5.1",
